@@ -7,9 +7,11 @@
     <kbd>rdoc -C</kbd> gives a standard report, <kbd>rdoc -C1</kbd> includes
     method parameters.  Method parameters are considered documented if they're
     marked-up with <tt>+</tt>, <tt><code></tt> or <code><tt></code>.
-  * The C parser now records the file location of aliases, attributes,
-    constants and methods.
+  * The C parser now uses <tt>*args</tt> instead of <tt>...</tt> if no
+    <tt>call-seq</tt> was provided to give names to the arguments.
 * Bug fixes
+  * The C parser now records the file location of aliases, attributes,
+    constants and methods allowing -C to work on C files.
   * Darkfish now handles dots in call-seq allowing <tt>ary.insert(index,
     obj...)</tt> to display correctly.  Patch #6 by KUBO Takehiro.
   * Improved processing of meta-programmed methods when followed by unparseable
